--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
+clap-help = "1.2.0"
+env_logger = "0.11.3"
+log = "0.4.21"
+once_cell = "1.19.0"
+prettytable = "0.10.0"
 rustyline = { version = "14.0.0", features = ["with-file-history"] }
+tokio = { version = "1.38.0", features = ["full"] }
