--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
-clap-help = "1.2.0"
+crossterm = { version = "0.27.0", features = ["event-stream"] }
 env_logger = "0.11.3"
 log = "0.4.21"
 once_cell = "1.19.0"
