--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.7", features = ["derive"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 env_logger = "0.11.3"
 log = "0.4.21"
+nix = { version = "0.29.0", features = ["term"] }
 once_cell = "1.19.0"
 prettytable = "0.10.0"
 rustyline = { version = "14.0.0", features = ["with-file-history"] }
