--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.86"
+anyhow = { version = "1.0.86", features = ["backtrace"] }
 clap = { version = "4.5.7", features = ["derive"] }
 ctrlc = "3.4.4"
 env_logger = "0.11.3"
+lazy_static = "1.5.0"
 log = "0.4.21"
 mio = { version = "1.0.0", features = ["os-poll", "os-ext"] }
 once_cell = "1.19.0"
 prettytable = "0.10.0"
 rustyline = { version = "14.0.0", features = ["with-file-history"] }
+shellwords = "1.1.0"
 termion = "4.0.2"
 thiserror = "1.0.63"
 tokio = { version = "1.38.0", features = ["full"] }
